--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/RamAnbalagan/babel-webpack-starter-kit#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
     "@babel/preset-env": "^7.3.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.5",
